fdo#58222 The BASIC HEX Command now returns uppercase hexadecimal characters

Instead of returning lowercase characters with BASIC's HEX command, uppercase characters are now returned. Digits from 0-9 are not affected. This change utilizes on OUString's toAsciiUpperCase() method.

Change-Id: Id6ea93a7635c1913c8592bf5519bdd7391f4e3bc